# gitRunSync

./: .gitignore  CMakeLists.txt  GitRunSync.toml.example  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: mingw-toolchain.cmake
res/: resources.rc
src/: GitRunSync.c  GitRunSync.h  error_codes.h  ini.c  ini.h  platform.h  platform_linux.c  platform_win32.c  toml_config.c  toml_config.h
